pictor (2.33) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 09 Feb 2015 10:17:32 -0600

pictor (2.32-0ubuntu1) vivid; urgency=medium

  * debian/control, debian/cron.hourly, index.php:
    - add an hourly cronjob to generate thumbnails
    - add a "batch" paramter to generate all thumbnails
    - separate the new Imagick() and readImage() into separate calls
      + this fixes some exceptions we were having with some thumbnails
    - check if exif[Orientaion] is set before using it
    - capture Imagick() exceptions
    - when generating cache filenames, remove duplicated / in paths
    - separate out generate_thumbnail() logic into its own function
      separate from print_thumbnail()
    - depend on php5-cli for the php5 command
  * debian/cron.hourly, index.php:
    - use sudo rather than su in cronjob
    - fix auto refresh into directories with other directories
  * index.php:
    - extract and scale thumbnail from videos
    - preserve aspect ratio when extracting video thumbnail

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 09 Feb 2015 10:17:29 -0600

pictor (2.31-0ubuntu1) utopic; urgency=medium

  * debian/control:
    - fix typo in dependency, move to suggests

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 08 Jul 2014 17:50:16 -0500

pictor (2.30-0ubuntu1) utopic; urgency=medium

  * debian/control, debian/pictor.dirs, debian/pictor.postinst,
    index.php:
    - add video transcoding support to pictor
    - depend on libav-tools for avconv command
    - improve video embedding support by transcoding to h264 and use the
      html5 video element
  * index.php:
    - extract the first image from a video and use it as a thumbnail
    - overlay a film strip icon on the video thumbnail
    - add support for mp4, use a "play" icon for video
    - no need to convert files that are already mp4

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 08 Jul 2014 17:41:44 -0500
