@@ -3,3 +3,4 @@ settings.php etc/pictor
 index.php usr/share/pictor
 favicon.ico usr/share/pictor
 kenburns.js usr/share/pictor
+pictor.jpg usr/share/pictor
