@@ -1,6 +1,10 @@
 pictor (2.33) unreleased; urgency=medium
 
-  * UNRELEASED
+  * debian/cron.hourly => debian/pictor.cron.hourly,
+    debian/pictor.install, index.php, pictor.jpg:
+    - when we fail to thumbnail an image, create a symlink to a simple
+      pictor logo image
+    - this will save us from retrying a failed thumbnail repeatedly
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 09 Feb 2015 10:17:32 -0600
 
